--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100;8..144,300;8..144,500;8..144,700&display=swap");
+
+* {
+  font-family: "Roboto Flex", sans-serif;
+}
 
 div{
     position: relative;
@@ -5,10 +10,12 @@ div{
 
 .logo-container{
     float:left;
+    margin-top: 4cm;
 }
 .form-container {
     float: left;
     max-width: 550px;
+    margin-left: 3cm;
   }
   .form-group {
     margin: 20px auto;
@@ -32,7 +39,39 @@ div{
   }
   input.input-checkbox {
     display: inline;
-    height: 30px;
-    width: 30px;
+    height: 15px;
+    width: 15px;
     margin-top: 0;
   }
+  button {
+    background-color: white;
+    border: 1px solid black;
+    padding: 15px 40px;
+  }
+  
+  ul {
+    columns: 2;
+    list-style: none;
+  }
+  
+  ul li::before {
+    content: "\2022"; /* Add content: \2022 is the CSS Code/unicode for a bullet */
+    color: red; /* Change the color */
+    font-weight: bold; /* If you want it to be bold */
+    display: inline-block; /* Needed to add space between the bullet and the text */
+    width: 1em; /* Also needed for space (tweak if needed) */
+    margin-left: -1em; /* Also needed for space (tweak if needed) */
+  }
+  .show-password img {
+    max-width: 30px;
+    position: relative;
+    top: 5px;
+    left: -5px;
+  }
+  input {
+    display: block;
+    height: 30px;
+    width: 100%;
+    margin-top: 15px;
+  }
+  
