--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,7 +33,7 @@ div{
         width: 30%;
 }
 .check-container {
-    /* float: left; */
+   
     display: inline-block;
     width: 70%;
   }
@@ -43,7 +43,7 @@ div{
     width: 15px;
     margin-top: 0;
   }
-  button {
+  button-signup{
     background-color: white;
     border: 1px solid black;
     padding: 15px 40px;
@@ -55,12 +55,12 @@ div{
   }
   
   ul li::before {
-    content: "\2022"; /* Add content: \2022 is the CSS Code/unicode for a bullet */
-    color: red; /* Change the color */
-    font-weight: bold; /* If you want it to be bold */
-    display: inline-block; /* Needed to add space between the bullet and the text */
-    width: 1em; /* Also needed for space (tweak if needed) */
-    margin-left: -1em; /* Also needed for space (tweak if needed) */
+    content: "\2022"; 
+    color: red; 
+    font-weight: bold; 
+    display: inline-block; 
+    width: 1em; 
+    margin-left: -1em; 
   }
   .show-password img {
     max-width: 30px;
@@ -74,4 +74,41 @@ div{
     width: 100%;
     margin-top: 15px;
   }
+  .label-header{
+    position: absolute;
+    right: 0;
+    top: 4px;
+    color: black;
+    height: 30px;  
+  }
+  .button-facebook{
+    text-align: center;
+    background-color:darkblue;
+  }
+  .button-google{
+    background-color:blue;
+    
+  }
+  .button-acount{
+
+    padding: 30px;
+    font-weight: 100;
+    border-radius: 35% ;
+    border: 2px dashed black;
+     }
+
+     .footer-container{
+    margin-top: 22cm;
+    text-align: center;
+     }
+a[href="http://www.mailchimp.com"]{
+text-decoration: none;
   
+}
+a[href="prof"]{
+  text-decoration: none;
+}
+  
+  a[href="http://term.com"]{
+    text-decoration: none;
+  }
